examples/test/testpolicy3334.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3334
  namespace: namespace429
spec:
  podSelector:
    matchLabels:
      key48: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value10
          key27: value6
      podSelector:
        matchLabels:
          key39: value19
          key40: value40
